fix overlapping text and import font styles

--- a/backgammon/src/components/MeetingSection/MeetingSection.css
+++ b/backgammon/src/components/MeetingSection/MeetingSection.css
@@ -2,28 +2,32 @@
     display: flex;
     height: fit-content;
     justify-content: space-around;
-    /* text-align: left; */
     padding: 50px;
 }
 
 .text {
     text-align: left;
+    display: flex;
+    flex-direction: column;
 }
 
 .meeting-text {
-    font-family: Lato;
+    font-family: 'Lato';
     font-weight: 300;
+    font-size: 40px;
 }
 
 .header-text {
-    font-family: Inria Serif;
+    font-family: 'Inria Serif';
+    font-size: 64px;
     font-weight: 700;
     margin-bottom: 40px;
+    font-style: normal;
 }
 
 .img {
-    max-width: 95px;
-    height: 95px;
+    max-width: 200px;
+    height: 190px;
 }
 
 .btn , .btn:hover{
@@ -31,14 +35,15 @@
     background: #44180B;
     color: white;
     text-align: center;
-    width: 170px;
-    font-family: Lato;
+    width: 360px;
+    font-family: 'Lato';
+    font-size: 32px;
+
 }
 
 .media { 
-    gap: 20px;
     display: flex;
     flex-direction: column;
-    align-self: center;
     align-items: center;
+    justify-content: space-around;
 }
