--- a/backgammon/src/components/Navbar/Navbar.css
+++ b/backgammon/src/components/Navbar/Navbar.css
@@ -9,10 +9,9 @@
 
 .title-text {
     font-family: 'Inria Serif', serif;
-    font-size: 40px;
     font-style: normal;
+    font-size: 40px;
     font-weight: 550;
-    line-height: normal;
 }
 
 .nav-options {
@@ -21,11 +20,9 @@
 }
 
 .nav-button {
-    font-family: 'Lato', sans-serif;;
+    font-family: 'Lato', sans-serif;
     font-size: 28px;
-    font-style: normal;
     font-weight: 50px;
-    line-height: normal;
     text-align: center;
     border: none;
     background-color: transparent;
